# CentralManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
conn_arduino/: arduino_notification.h  firebase_notifications.cpp  firebase_notifications.h
database/: SQLDatabase.cpp  SQLDatabase.h  database.h
server/: parkingnotifications.cpp  parkingnotifications.h  parkingspacesimpl.cpp  parkingspacesimpl.h  server.cpp  server.h
testclient/: main.cpp
